--- a/Riskvalve/Views/AssetRegister/Platform.cshtml
+++ b/Riskvalve/Views/AssetRegister/Platform.cshtml
@@ -91,7 +91,7 @@
                                 <div class="form-group-inline">
                                     <label for="field-plarfoem-area">Business Area</label>
                                     <select id="field-platform-area" name="businessarea" class="form-control" required>
-                                        <option value="">Select Business Area</option>
+                                        <option value="" selected disabled>-- Select Business Area --</option>
                                         @{
                                             if (areaList != null)
                                             {
