--- a/Riskvalve/Views/Maintenance/Index.cshtml
+++ b/Riskvalve/Views/Maintenance/Index.cshtml
@@ -158,7 +158,8 @@
                                             <div class="form-group ">
                                                 <label for="field-maintenance-repaired">Is Valve Repaired</label>
                                                 <select class="form-control" id="field-maintenance-repaired"
-                                                    name="IsValveRepairedID">
+                                                    name="IsValveRepairedID" required>
+                                                    <option value="" selected disabled>-- Select Is Valve Repaired --</option>
                                                     <option value="1">Yes</option>
                                                     <option value="2">No</option>
                                                 </select>
