--- a/Riskvalve/Views/Assessment/PrintAssessment.cshtml
+++ b/Riskvalve/Views/Assessment/PrintAssessment.cshtml
@@ -25,7 +25,7 @@
                 }
                 </td>
                 </td>
-                <td colspan="2" style="width: 20%;">Date</td>
+                <td colspan="2" style="width: 20%;">Assessment Date</td>
                 <td colspan="2" style="width: 20%;">@assessment.AssessmentDate</td>
             </tr>
             <tr>
