--- a/Riskvalve/Views/Inspection/PrintInspection.cshtml
+++ b/Riskvalve/Views/Inspection/PrintInspection.cshtml
@@ -25,7 +25,7 @@
                 <td colspan="4" style="width: 30%;">Tag Number</td>
                 <td colspan="2" style="width: 25%;">@inspection.Asset.TagNo</td>
                 </td>
-                <td colspan="2" style="width: 20%;">Date</td>
+                <td colspan="2" style="width: 20%;">Inspection Date</td>
                 <td colspan="2" style="width: 20%;">@inspection.InspectionDate</td>
             </tr>
             <tr>
