--- a/Riskvalve/Views/Maintenance/PrintMaintenance.cshtml
+++ b/Riskvalve/Views/Maintenance/PrintMaintenance.cshtml
@@ -17,7 +17,7 @@
             <tr>
                 <td colspan="4" style="width: 30%;">Tag Number</td>
                 <td colspan="2" style="width: 25%;">@maintenance.Asset.TagNo</td>
-                <td colspan="2" style="width: 20%;">Date</td>
+                <td colspan="2" style="width: 20%;">Maintenance Date</td>
                 <td colspan="2" style="width: 20%;">@maintenance.MaintenanceDate</td>
             </tr>
             <tr>
@@ -125,20 +125,18 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="4">Maintenance Description</td>
-                <td colspan="2">@maintenance.MaintenanceDescription</td>
+                <td rowspan="5" colspan="4">Maintenance image</td>
+                <td rowspan="5" colspan="2">
+                    @foreach (var image in maintenance.MaintenanceFiles) {
+                        <img style="max-width: 100px;" src="/@image.FilePath"/>
+                    }
+                </td>
                 <td colspan="5">PSV/PRV</td>
                 <td colspan="1" class="checkbox">
                     <input type="checkbox" @(maintenance.Asset.UsageType.ToLower() == "psv/prv" ? "checked" : "")/>
                 </td>
             </tr>
             <tr>
-                <td rowspan="4" colspan="4">Maintenance image</td>
-                <td rowspan="4" colspan="2">
-                    @foreach (var image in maintenance.MaintenanceFiles) {
-                        <img style="max-width: 100px;" src="/@image.FilePath"/>
-                    }
-                </td>
                 <td colspan="6" class="table-section sub-section">Status</td>
             </tr>
             <tr>
